[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment05-sales-forecast"
version = "0.1.0"
description = "Sales forecasting pipeline for ML course assignment"
authors = [ { name = "Student", email = "student@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"

[tool.poetry]
optional = true
